--- a/css/reset.css
+++ b/css/reset.css
@@ -31,7 +31,7 @@ a, a:link, a:visited  {
 
 a:hover  {
     color: inherit;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 /* Common */
