--- a/css/main.css
+++ b/css/main.css
@@ -24,11 +24,25 @@ body{
     height: 800px;
 
     background-color: #265847;
-    background-image: url(./../img/header-bg.jpg);
+    background-image: url(./../img/header/header-bg.jpg);
     background-position: center;
     background-size: cover;
 
     padding-top: 50px;
+
+    color: #FFFFFF
+}
+
+.header-inner{
+    display: flex;
+    align-items: center;
+
+    height: 100px;
+
+    background-color: #265847;
+    background-image: url(./../img/header/header-small-bg.jpg);
+    background-position: center;
+    background-size: cover;
 
     color: #FFFFFF
 }
@@ -54,6 +68,10 @@ body{
 
 .header-nav-list{
     display: flex;  
+}
+
+.header-nav-list a:hover{
+    text-decoration: underline;
 }
 
 .header-nav-item:not(:last-child){
@@ -93,6 +111,10 @@ body{
     font-size: 16px;
 }
 
+.header-scroll:hover{
+    text-decoration: underline;
+}
+
 .header-scroll::after{
     position: absolute;
     bottom: 0;
@@ -104,7 +126,7 @@ body{
     width: 25px;
     height: 25px;
 
-    background-image: url(./../img/arrow-down.svg);
+    background-image: url(./../img/header/arrow-down.svg);
 }
 
 /* Main */
@@ -174,6 +196,10 @@ body{
     text-align: center;
 }
 
+.main-content-btn:hover{
+    text-decoration: underline;
+}
+
 /* Footer */
 
 .footer {
@@ -230,6 +256,119 @@ footer .logo {
     font-size: 18px;
 }
 
+.footer-widget-list a:hover{
+    text-decoration: underline;
+}
+
 .footer-widget-items {
     margin-bottom: 15px;
 }
+
+/* Inner page */
+
+.inner-page-tours{
+    padding-top: 60px;
+    padding-bottom: 100px; 
+}
+
+.inner-page-tours-header{
+    margin-bottom: 60px;
+
+    text-align: center;
+}
+
+/* Card */
+
+.cards-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.cards-row:not(:last-child){
+    margin-bottom: 30px;
+}
+
+.cards-row-column{
+    display: flex;
+    flex-direction: column;
+     row-gap: 30px; /* Отступ между рядами через свойство флексбокс */
+}
+
+/* Отступ сверху через выбор элемента у которого есть соседний элемент слева, только для него сработает отступ
+   Знак > выбирает элементы первого уровня вложенности, 
+   Знак * означает что необходимо выбрать все элементы первого уровня вложенности 
+   (можно вместо * указать div, тогда будут выбраны только div первого уровня вложенности */
+/* .cards-row-column > * + *{  
+    margin-top: 30px;
+}  */
+
+.tours-description {
+    display: flex;
+    align-items: center;
+
+    height: 80px;
+
+    padding-left: 30px;
+    padding-right: 30px;
+
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.card.gray-color {
+    width: 570px;
+    height: 435px;
+
+    background-color: #A6A6A6;
+}
+
+.card.sand-color{
+    width: 570px;
+    height: 435px;
+
+    background-color: #C1B19B;
+}
+
+.card.blue-color{
+    width: 670px;
+    height: 365px;
+
+    background-color: #66B0BE;
+}
+
+.card.brown-color{
+    width: 670px;
+    height: 365px;
+
+    background-color: #876F56;
+}
+
+.card.green-color{
+    width: 470px;
+    height: 760px;
+
+    background-color: #27695E;
+}
+
+.tours-description-title {
+    font-weight: 700;
+    font-size: 28px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    color: #FFFFFF;
+}
+
+.cards-row a:hover{
+   position: relative;
+   bottom: 3px;
+
+   opacity: 0.8;
+}
+
+.cards-row a:active{
+    position: relative;
+    top: 6px;
+ } 
