--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 /* font-family: 'Lobster', cursive; */
 
 
-body{
+body {
     font-family: 'PT Sans', sans-serif;
 }
 
@@ -18,7 +18,7 @@ body{
 }
 
 /* Header */
-.header{
+.header {
     position: relative;
 
     height: 800px;
@@ -33,7 +33,7 @@ body{
     color: #FFFFFF
 }
 
-.header-inner{
+.header-inner {
     display: flex;
     align-items: center;
 
@@ -47,7 +47,7 @@ body{
     color: #FFFFFF
 }
 
-.header-row{
+.header-row {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,28 +57,28 @@ body{
     margin: 0 auto;
 }
 
-.logo{
+.logo {
     font-family: 'Lobster', cursive;
     font-size: 40px; 
 }
 
-.header-nav{
+.header-nav {
     font-size: 22px;
 }
 
-.header-nav-list{
+.header-nav-list {
     display: flex;  
 }
 
-.header-nav-list a:hover{
+.header-nav-list a:hover {
     text-decoration: underline;
 }
 
-.header-nav-item:not(:last-child){
+.header-nav-item:not(:last-child) {
     margin-right: 50px;
 }
 
-.header-content{
+.header-content {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -89,18 +89,18 @@ body{
     text-align: center;
 }
 
-.header-title{
+.header-title {
     font-weight: 700;
     font-size: 60px;
 
     margin-bottom: 20px;
 }
 
-.header-content p{
+.header-content p {
     font-size: 24px;
 }
 
-.header-scroll{
+.header-scroll {
     position: absolute;
     bottom: 25px;
     left: 50%;
@@ -111,11 +111,11 @@ body{
     font-size: 16px;
 }
 
-.header-scroll:hover{
+.header-scroll:hover {
     text-decoration: underline;
 }
 
-.header-scroll::after{
+.header-scroll::after {
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -131,22 +131,22 @@ body{
 
 /* Main */
 
-.main{
+.main {
     padding-top: 120px;
     padding-bottom: 120px;
 
 }
 
-.main-row{
+.main-row {
     display: flex;
     justify-content: space-between;
 }
 
-.main-row:not(:last-child){
+.main-row:not(:last-child) {
     margin-bottom: 120px;
 }
 
-.main-row:nth-child(even){
+.main-row:nth-child(even) {
     flex-direction: row-reverse;
 }
 
@@ -172,11 +172,11 @@ body{
     color: #31405B;
 }
 
-.main-content-text p{
+.main-content-text p {
     margin-bottom: 15px;
 }
 
-.main-content-text a{
+.main-content-text a {
     color: #138ECE;
     text-decoration: underline;
 }
@@ -195,7 +195,7 @@ body{
     text-align: center;
 }
 
-.main-content-btn:hover{
+.main-content-btn:hover {
     text-decoration: underline;
 }
 
@@ -215,7 +215,7 @@ body{
     justify-content: space-between;
 }
 
-.footer-widget-wrapper{
+.footer-widget-wrapper {
     display: flex;
 
     padding-top: 10px;
@@ -225,7 +225,7 @@ body{
     width: 270px;
 }
 
-.footer-copyright p{
+.footer-copyright p {
     font-size: 16px;
     line-height: 1.6;
 }
@@ -234,11 +234,11 @@ footer .logo {
     margin-bottom: 26px;
 }
 
-.footer-widget-info{
+.footer-widget-info {
     width: 170px;
 }
 
-.footer-widget-services, .footer-widget-contacts{
+.footer-widget-services, .footer-widget-contacts {
     width: 270px;
 }
 
@@ -257,7 +257,7 @@ footer .logo {
     font-size: 18px;
 }
 
-.footer-widget-list a:hover{
+.footer-widget-list a:hover {
     text-decoration: underline;
 }
 
@@ -267,14 +267,14 @@ footer .logo {
 
 /* Inner page tours */
 
-.inner-page-tours{
+.inner-page-tours {
     padding-top: 60px;
     padding-bottom: 100px;
 
     background-color: #F2F8F6;
 }
 
-.inner-page-tours-header{
+.inner-page-tours-header {
     margin-bottom: 60px;
 
     text-align: center;
@@ -288,11 +288,11 @@ footer .logo {
 }
 
 
-.cards-row:not(:last-child){
+.cards-row:not(:last-child) {
     margin-bottom: 30px;
 }
 
-.cards-row-column{
+.cards-row-column {
     display: flex;
     flex-direction: column;
      row-gap: 30px; /* Отступ между рядами через свойство флексбокс */
@@ -325,25 +325,25 @@ footer .logo {
     background-color: #A6A6A6;
 }
 
-.card.sand-color{
+.card.sand-color {
     width: 570px;
 
     background-color: #C1B19B;
 }
 
-.card.blue-color{
+.card.blue-color {
     width: 670px;
 
     background-color: #66B0BE;
 }
 
-.card.brown-color{
+.card.brown-color {
     width: 670px;
 
     background-color: #876F56;
 }
 
-.card.green-color{
+.card.green-color {
     width: 470px;
 
     background-color: #27695E;
@@ -359,42 +359,152 @@ footer .logo {
     color: #FFFFFF;
 }
 
-.cards-row a:hover{
+.cards-row a:hover {
    position: relative;
    bottom: 3px;
 
    opacity: 0.8;
 }
 
-.cards-row a:active{
+.cards-row a:active {
     position: relative;
     top: 6px;
  } 
 
- /* Inner page extreme */
-
-.inner-page-extreme{
-    padding-top: 60px;
-    padding-bottom: 100px;
-
-    background-color: #F2F8F6;
-}
-
-.inner-page-extreme-row {
+ /* Inner page article */
+ .inner-page-article-row {
     display: flex;
     justify-content: space-between;
 }
 
-.inner-page-extreme-nav {
+ /* Article nav */
+ .inner-page-article-nav {
     width: 270px;
-    height: 373px;
 
-    background-color: #0AC883;
+    flex-shrink: 0; /* Запрещает сокращаться блоку, блок всегда будет заданного размера */
+    flex-grow: 0; /* Запрещает расти блоку, блок всегда будет заданного размера */
 }
 
-.inner-page-extreme-wrapper {
-    width: 771px;
-    height: 1475px;
+.inner-page-article-nav-title {
+    margin-bottom: 35px;
 
-    background-color: #27695E;
+    font-weight: 700;
+    font-size: 28px;
+    color: #31405B;
+}
+
+.inner-page-article-nav-list {
+    border-top: 1px solid #D6D9D8;
+
+    font-size: 20px;
+    line-height: 1.3;
+    color: #138ECE;
+}
+
+.inner-page-article-nav-list li {
+    border-bottom: 1px solid #D6D9D8;
+}
+
+.inner-page-article-nav-list a {
+    display: block;
+
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+.inner-page-article-nav-list a.active {
+    font-weight: 700;
+    color: #E04E4E;
+}
+
+.inner-page-article-nav-list a:hover {
+    position: relative;
+    left: 5px;
+
+    text-decoration: underline;
+
+    border-radius: 10px;
+    
+    background-color: rgba(155, 199, 188, 0.3);
+}
+
+.inner-page-article-nav-list a:active {
+    text-decoration: underline;
+    background-color: rgb(185, 193, 191, 0.5);
+}
+
+/* Article */
+.inner-page-article {
+    width: 770px;
+
+    flex-shrink: 0;/* Запрещает сокращаться блоку, блок всегда будет заданного размера */
+    flex-grow: 0; /* Запрещает расти блоку, блок всегда будет заданного размера */
+
+    color: #31405B;
+}
+
+.inner-page-article > *:first-child{
+    margin-bottom: 40px;
+    
+    line-height: 1;
+}
+
+.inner-page-article > :nth-child(2) { /* Убрал отступ у элемента перед картинкой, иначе он суммируется с картинкой и получается 55px */
+    margin-bottom: 0;
+}
+
+.inner-page-article > *:last-child {
+  margin-bottom: 0;
+}
+
+.inner-page-article h1,
+.inner-page-article h2,
+.inner-page-article h3,
+.inner-page-article h4,
+.inner-page-article h5,
+.inner-page-article h6 {
+    margin-bottom: 15px;
+
+    font-weight: 700;
+    line-height: 1.2;
+}
+
+.inner-page-article h1 { 
+    font-size: 54px;
+}
+
+.inner-page-article h2 { 
+    font-size: 32px;
+}
+
+.inner-page-article h3 { 
+    font-size: 26px;
+}
+
+.inner-page-article h4 {  
+    font-size: 22px;
+}
+
+.inner-page-article h5 {  
+    font-size: 20px;
+}
+
+.inner-page-article h6 {   
+    font-size: 18px;
+}
+
+.inner-page-article p {
+    margin-bottom: 15px;
+
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.inner-page-article p > a {
+    text-decoration: underline;
+    color: #138ECE;
+}
+
+.inner-page-article img {
+   margin: 40px 0;
 }
