--- a/css/main.css
+++ b/css/main.css
@@ -383,10 +383,13 @@ footer .logo {
 
     flex-shrink: 0; /* Запрещает сокращаться блоку, блок всегда будет заданного размера */
     flex-grow: 0; /* Запрещает расти блоку, блок всегда будет заданного размера */
+
+    line-height: 1.3;
 }
 
 .inner-page-article-nav-title {
     margin-bottom: 35px;
+    padding-top: 10px;
 
     font-weight: 700;
     font-size: 28px;
@@ -397,7 +400,6 @@ footer .logo {
     border-top: 1px solid #D6D9D8;
 
     font-size: 20px;
-    line-height: 1.3;
     color: #138ECE;
 }
 
@@ -429,7 +431,6 @@ footer .logo {
 }
 
 .inner-page-article-nav-list a:active {
-    text-decoration: underline;
     background-color: rgb(185, 193, 191, 0.5);
 }
 
@@ -440,17 +441,14 @@ footer .logo {
     flex-shrink: 0;/* Запрещает сокращаться блоку, блок всегда будет заданного размера */
     flex-grow: 0; /* Запрещает расти блоку, блок всегда будет заданного размера */
 
+    line-height: 1.6;
     color: #31405B;
 }
 
 .inner-page-article > *:first-child{
     margin-bottom: 40px;
     
-    line-height: 1;
-}
-
-.inner-page-article > :nth-child(2) { /* Убрал отступ у элемента перед картинкой, иначе он суммируется с картинкой и получается 55px */
-    margin-bottom: 0;
+    line-height: 1.3;
 }
 
 .inner-page-article > *:last-child {
@@ -466,7 +464,6 @@ footer .logo {
     margin-bottom: 15px;
 
     font-weight: 700;
-    line-height: 1.2;
 }
 
 .inner-page-article h1 { 
