--- a/css/main.css
+++ b/css/main.css
@@ -662,7 +662,7 @@ footer .logo {
 .input {
     width: 100%;
 
-    padding: 15px 20px;
+    padding: 12px 20px 15px;
 
     background: #EEEEEE;
     border: 1px solid #C0C0C0;
