--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,8 @@ legend {
     left: 50%;
     transform: translate(-50%, -50%);
 
+    padding-top: 14px;
+
     width: 1170px;
 
     text-align: center;
@@ -186,7 +188,7 @@ legend {
     position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-37%);
 
     content: "";
     display: inline-block;
