--- a/css/main.css
+++ b/css/main.css
@@ -298,6 +298,12 @@ legend {
   padding-bottom: 120px;
 }
 
+.inner-page {
+  padding-top: 60px;
+  padding-bottom: 100px;
+  background-color: #F2F8F6;
+}
+
 .main-row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -316,6 +322,12 @@ legend {
   -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
+}
+
+.main-title {
+  font-weight: 700;
+  font-size: 54px;
+  color: #31405B;
 }
 
 .main-content {
@@ -604,6 +616,10 @@ legend {
   line-height: 1.6;
 }
 
+.contacts-widget-body.contacts-widget-body--map {
+  height: 400px;
+}
+
 .contacts-widget-list li {
   position: relative;
   margin-bottom: 15px;
@@ -657,7 +673,7 @@ legend {
 }
 
 .form-block {
-  margin-bottom: 30px;
+  margin-bottom: 27px;
   font-size: 18px;
 }
 
@@ -686,7 +702,7 @@ legend {
 /* Text-form */
 .input {
   width: 100%;
-  padding: 12px 20px 15px;
+  padding: 10px 18px 15px;
   background: #EEEEEE;
   border: 1px solid #C0C0C0;
   border-radius: 6px;
@@ -944,7 +960,11 @@ footer .logo {
   .header-row {
     width: 100%;
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 20px;
+  }
+
+  .inner-page-tours-header {
+    margin-bottom: 45px;
   }
 
   .header-content {
@@ -997,6 +1017,157 @@ footer .logo {
     margin-bottom: 20px;
   }
 
+  /* Inner-page */
+  .inner-page {
+    padding-top: 70px;
+    padding-bottom: 60px;
+  }
+
+  .inner-page-article {
+    width: 570px;
+  }
+
+  .inner-page.inner-page--contats {
+    padding-top: 45px;
+    padding-bottom: 60px;
+  }
+
+  .inner-page-article > *:first-child {
+    margin-bottom: 20px;
+  }
+
+  .inner-page.inner-page--tracking {
+    padding-top: 40px;
+    padding-bottom: 60px;
+  }
+
+  .inner-page-article img {
+    margin: 30px 0;
+  }
+
+  .inner-page-article-row {
+    -webkit-column-gap: 30px;
+            column-gap: 30px;
+  }
+
+  .inner-page-article h1 {
+    font-size: 50px;
+  }
+
+  .inner-page-article-nav-list, .inner-page-article p {
+    font-size: 18px;
+  }
+
+  .tours-description {
+    height: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .tours-description-title {
+    font-size: 24px;
+  }
+
+  .contacts-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 40px;
+  }
+
+  .contacts-title {
+    margin-bottom: 49px;
+  }
+
+  .contacts-column-info {
+    width: 870px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-column-gap: 30px;
+            column-gap: 30px;
+  }
+
+  .contact-widget {
+    width: 100%;
+  }
+
+  .contact-widget + .contact-widget {
+    margin-top: 0;
+  }
+
+  .contacts-widget-title {
+    font-size: 24px;
+  }
+
+  .contacts-widget-title.contacts-widget-title--adress {
+    margin-bottom: 25px;
+  }
+
+  .contacts-widget-body {
+    font-size: 18px;
+  }
+
+  .contacts-widget-body.contacts-widget-body--map {
+    height: 310px;
+  }
+
+  .input {
+    padding: 10px 25px 15px;
+  }
+
+  /* Cards */
+  .card.gray-color {
+    width: 420px;
+  }
+
+  .card.gray-color img {
+    width: 420px;
+    height: 240px;
+  }
+
+  .card.sand-color {
+    width: 420px;
+  }
+
+  .card.sand-color img {
+    width: 420px;
+    height: 240px;
+  }
+
+  .card.blue-color {
+    width: 495px;
+  }
+
+  .card.blue-color img {
+    width: 495px;
+    height: 210px;
+  }
+
+  .card.brown-color {
+    width: 495px;
+  }
+
+  .card.brown-color img {
+    widows: 495px;
+    height: 210px;
+  }
+
+  .card.green-color {
+    width: 345px;
+  }
+
+  .card.green-color img {
+    width: 345px;
+    height: 510px;
+  }
+
+  /* Form */
+  .form {
+    width: 870px;
+  }
+
   /* Footer */
   .footer {
     padding-top: 50px;
@@ -1007,9 +1178,17 @@ footer .logo {
     display: none;
   }
 
+  .footer-widget-info {
+    width: 195px;
+  }
+
   .footer .logo {
     font-size: 30px;
     margin-bottom: 20px;
+  }
+
+  .footer-copyright {
+    width: 195px;
   }
 
   .footer-copyright p {
@@ -1027,6 +1206,18 @@ footer .logo {
 
   .header-row {
     width: 100%;
+  }
+
+  .header-inner {
+    height: 80px;
+  }
+
+  .header-row.header-row--inner {
+    padding-right: 32px;
+  }
+
+  .logo {
+    font-size: 30px;
   }
 
   .header-content {
@@ -1092,6 +1283,150 @@ footer .logo {
     line-height: 46px;
   }
 
+  /* Inner-page */
+  .inner-page {
+    padding-top: 45px;
+    padding-bottom: 40px;
+  }
+
+  .inner-page.inner-page--tracking {
+    padding-top: 20px;
+  }
+
+  .inner-page.inner-page--contats {
+    padding-bottom: 35px;
+  }
+
+  .inner-page-article-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    row-gap: 40px;
+  }
+
+  .inner-page-article-nav-title {
+    padding-top: 0;
+    margin-bottom: 20px;
+  }
+
+  .inner-page-article img {
+    margin: 20px 0;
+  }
+
+  .inner-page-article-nav {
+    width: 100%;
+  }
+
+  .inner-page-article h1 {
+    font-size: 42px;
+  }
+
+  .inner-page-article p {
+    font-size: 16px;
+  }
+
+  .tours-description {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .contacts-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 40px;
+  }
+
+  .contacts-column-info {
+    width: 570px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 40px;
+  }
+
+  .contact-widget + .contact-widget {
+    margin-top: 0;
+  }
+
+  .contacts-title {
+    margin-bottom: 35px;
+  }
+
+  .input {
+    padding: 10px 18px 15px;
+  }
+
+  /* Cards */
+  .cards-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 30px;
+  }
+
+  .card.gray-color {
+    width: 100%;
+  }
+
+  .card.gray-color img {
+    max-height: 240px;
+    width: 100%;
+  }
+
+  .card.sand-color {
+    width: 100%;
+  }
+
+  .card.sand-color img {
+    height: 240px;
+    width: 100%;
+  }
+
+  .card.blue-color {
+    width: 100%;
+  }
+
+  .card.blue-color img {
+    height: 210px;
+    width: 100%;
+  }
+
+  .card.brown-color {
+    width: 100%;
+  }
+
+  .card.brown-color img {
+    height: 210px;
+    width: 100%;
+  }
+
+  .card.green-color {
+    width: 100%;
+  }
+
+  .card.green-color img {
+    height: 210px;
+    width: 570px;
+  }
+
+  /* Form */
+  .form {
+    width: 570px;
+    padding: 30px;
+  }
+
+  .form-block:last-of-type {
+    margin-bottom: 30px;
+  }
+
   /* Footer */
   .footer {
     padding-top: 40px;
@@ -1127,6 +1462,18 @@ footer .logo {
 
   .header-row {
     width: 100%;
+  }
+
+  .header-row.header-row--inner {
+    padding-right: 20px;
+  }
+
+  .header-row.header-row--inner img {
+    padding-top: 5px;
+  }
+
+  .inner-page-tours-header {
+    margin-bottom: 30px;
   }
 
   .header-content {
@@ -1178,6 +1525,14 @@ footer .logo {
     font-size: 34px;
   }
 
+  .main-title.main-title--contacts {
+    font-size: 28px;
+  }
+
+  .main-title.main-title--tours {
+    font-size: 28px;
+  }
+
   .main-content-img {
     width: auto;
     height: 150px;
@@ -1185,8 +1540,187 @@ footer .logo {
     margin-bottom: 20px;
   }
 
+  /* Inner-page */
+  .inner-page {
+    padding-top: 40px;
+  }
+
+  .inner-page-article {
+    width: 290px;
+  }
+
+  .inner-page.inner-page--contats {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .inner-page-article h2, h3 {
+    line-height: 1;
+  }
+
+  .inner-page-article h4 {
+    padding-right: 15px;
+  }
+
+  .inner-page.inner-page--tracking {
+    padding-bottom: 40px;
+  }
+
+  .inner-page-article-row {
+    row-gap: 0;
+  }
+
+  .inner-page-article > *:first-child {
+    margin-bottom: 10px;
+  }
+
+  .inner-page-article h1 {
+    font-size: 28px;
+  }
+
+  .inner-page-article-nav-list, .inner-page-article p {
+    font-size: 16px;
+  }
+
+  .inner-page-article-nav-title {
+    font-size: 22px;
+    margin-bottom: 15px;
+  }
+
+  .inner-page-article-nav-list a {
+    padding-top: 6px;
+    padding-bottom: 8px;
+    padding-right: 51px;
+  }
+
+  .tours-description {
+    height: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .tours-description-title {
+    font-size: 20px;
+  }
+
+  .contacts-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 42px;
+  }
+
+  .contacts-column-info {
+    width: 290px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 30px;
+  }
+
+  .contact-widget + .contact-widget {
+    margin-top: 0;
+  }
+
+  .contacts-widget-title.contacts-widget-title--adress {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  .contacts-widget-body {
+    font-size: 16px;
+    line-height: 1.3;
+  }
+
+  .contacts-widget-body.contacts-widget-body--map {
+    height: 157px;
+  }
+
+  .contacts-widget-list li {
+    margin-bottom: 20px;
+    padding-left: 32px;
+  }
+
+  .contacts-widget-list li::before {
+    top: 3px;
+  }
+
+  .contacts-title {
+    margin-bottom: 30px;
+  }
+
+  .contacts-widget-title {
+    font-size: 20px;
+  }
+
+  .input {
+    padding: 10px 13px 15px;
+  }
+
+  /* Cards */
+  .cards-row, .cards-row-column {
+    row-gap: 20px;
+  }
+
+  .cards-row:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  /* Form */
+  .form {
+    width: 290px;
+    padding: 20px 15px 30px 15px;
+  }
+
+  .form-block-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 10px;
+  }
+
+  .form-block {
+    margin-bottom: 18px;
+    font-size: 16px;
+  }
+
+  .form-title {
+    font-size: 24px;
+    margin-bottom: 25px;
+  }
+
+  .form-blok-title {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+
+  .label-radio {
+    margin-bottom: 11px;
+  }
+
+  .label-checkbox {
+    margin-bottom: 20px;
+    padding-right: 7px;
+  }
+
+  .form-block:last-of-type {
+    margin-bottom: 20px;
+  }
+
+  .button {
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+
   /* Footer */
   .footer {
+    padding-top: 45px;
     text-align: center;
   }
 
@@ -1210,6 +1744,7 @@ footer .logo {
         -ms-flex-align: center;
             align-items: center;
     margin-bottom: 40px;
+    row-gap: 7px;
   }
 
   .footer-widget-services {
@@ -1226,6 +1761,10 @@ footer .logo {
 
   .footer-widget-wrapper > * {
     width: 100%;
+  }
+
+  .footer-widget.footer-widget-contacts > ul li:not(:last-child) {
+    margin-bottom: 15px;
   }
 
   .footer-widget-title {
