--- a/sass/blocks/_contacts.scss
+++ b/sass/blocks/_contacts.scss
@@ -29,6 +29,10 @@
     line-height: 1.6;
 }
 
+.contacts-widget-body.contacts-widget-body--map{
+    height: 400px;
+}
+
 .contacts-widget-list li {
     position: relative;
     margin-bottom: 15px;
@@ -85,7 +89,7 @@
 }
 
 .form-block {
-    margin-bottom: 30px;
+    margin-bottom: 27px;
     font-size: 18px;
 }
 
@@ -113,7 +117,7 @@
 .input {
     width: 100%;
 
-    padding: 12px 20px 15px;
+    padding: 10px 18px 15px;
 
     background: #EEEEEE;
     border: 1px solid #C0C0C0;
