--- a/sass/main.css
+++ b/sass/main.css
@@ -8,22 +8,16 @@ html {
 body {
   height: 100%;
   /* sticky footer */
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   /* sticky footer */
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   /* sticky footer */
   font-family: 'PT Sans', sans-serif;
   color: #31405B;
 }
 
 body > * {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   /* sticky footer */
 }
 
@@ -80,8 +74,7 @@ legend {
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :focus,
@@ -189,12 +182,8 @@ legend {
 }
 
 .header-inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   height: 100px;
   background-color: #265847;
   background-image: url(./../img/header/header-small-bg.jpg);
@@ -204,15 +193,9 @@ legend {
 }
 
 .header-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   width: 1170px;
   margin: 0 auto;
 }
@@ -222,8 +205,6 @@ legend {
 }
 
 .header-nav-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -243,8 +224,7 @@ legend {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   padding-top: 14px;
   width: 1170px;
   text-align: center;
@@ -265,8 +245,7 @@ legend {
   position: absolute;
   bottom: 25px;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   padding-bottom: 34px;
   font-size: 16px;
 }
@@ -279,8 +258,7 @@ legend {
   position: absolute;
   bottom: 0;
   left: 50%;
-  -webkit-transform: translateX(-37%);
-          transform: translateX(-37%);
+  transform: translateX(-37%);
   content: "";
   display: inline-block;
   width: 25px;
@@ -295,16 +273,18 @@ legend {
 
 .main {
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 100px;
+}
+
+.inner-page {
+  padding-top: 60px;
+  padding-bottom: 100px;
+  background-color: #F2F8F6;
 }
 
 .main-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .main-row:not(:last-child) {
@@ -312,10 +292,13 @@ legend {
 }
 
 .main-row:nth-child(even) {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+
+.main-title {
+  font-weight: 700;
+  font-size: 54px;
+  color: #31405B;
 }
 
 .main-content {
@@ -344,23 +327,16 @@ legend {
 }
 
 .inner-page-article-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 /* Article nav */
 .inner-page-article-nav {
   width: 270px;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   /* Запрещает сокращаться блоку, блок всегда будет заданного размера */
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
+  flex-grow: 0;
   /* Запрещает расти блоку, блок всегда будет заданного размера */
   line-height: 1.3;
 }
@@ -409,12 +385,9 @@ legend {
 /* Article */
 .inner-page-article {
   width: 770px;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   /* Запрещает сокращаться блоку, блок всегда будет заданного размера */
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
+  flex-grow: 0;
   /* Запрещает расти блоку, блок всегда будет заданного размера */
   line-height: 1.6;
   color: #31405B;
@@ -479,12 +452,8 @@ legend {
 }
 
 .cards-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .cards-row:not(:last-child) {
@@ -492,13 +461,8 @@ legend {
 }
 
 .cards-row-column {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   row-gap: 30px;
   /* Отступ между рядами через свойство флексбокс */
 }
@@ -511,12 +475,8 @@ legend {
     margin-top: 30px;
 }  */
 .tours-description {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   height: 80px;
   padding-left: 30px;
   padding-right: 30px;
@@ -573,15 +533,9 @@ legend {
 }
 
 .contacts-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .contacts-column-info {
@@ -646,8 +600,7 @@ legend {
   padding: 40px;
   line-height: 1.3;
   background: #FFFFFF;
-  -webkit-box-shadow: 0px 10px 20px rgba(211, 211, 211, 0.25);
-          box-shadow: 0px 10px 20px rgba(211, 211, 211, 0.25);
+  box-shadow: 0px 10px 20px rgba(211, 211, 211, 0.25);
 }
 
 .form-title {
@@ -676,11 +629,8 @@ legend {
 }
 
 .form-block-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-column-gap: 10px;
-          column-gap: 10px;
+  column-gap: 10px;
 }
 
 /* Text-form */
@@ -693,18 +643,6 @@ legend {
   font-size: 18px;
 }
 
-input::-webkit-input-placeholder {
-  color: rgba(49, 64, 91, 0.5);
-}
-
-input:-ms-input-placeholder {
-  color: rgba(49, 64, 91, 0.5);
-}
-
-input::-ms-input-placeholder {
-  color: rgba(49, 64, 91, 0.5);
-}
-
 input::placeholder {
   color: rgba(49, 64, 91, 0.5);
 }
@@ -714,8 +652,7 @@ input::placeholder {
   padding-left: 40px;
   padding-right: 40px;
   background: #0AC883;
-  -webkit-box-shadow: 0px 8px 20px rgba(24, 219, 148, 0.35);
-          box-shadow: 0px 8px 20px rgba(24, 219, 148, 0.35);
+  box-shadow: 0px 8px 20px rgba(24, 219, 148, 0.35);
   border-radius: 50px;
   cursor: pointer;
   font-weight: 700;
@@ -731,12 +668,8 @@ input::placeholder {
 }
 
 .label-checkbox {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
   margin-bottom: 17px;
 }
 
@@ -750,9 +683,7 @@ input::placeholder {
   position: absolute;
   opacity: 0;
   z-index: -1;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  appearance: none;
 }
 
 .custom-checkbox {
@@ -760,8 +691,7 @@ input::placeholder {
   display: inline-block;
   vertical-align: bottom;
   margin-right: 15px;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   width: 20px;
   height: 20px;
   background: #EEEEEE;
@@ -775,36 +705,26 @@ input::placeholder {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(0);
-          transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0);
   width: 17px;
   height: 17px;
   background-image: url(./../img/icons/check.svg);
   background-position: center;
   background-repeat: no-repeat;
-  -webkit-transition: -webkit-transform .2s ease-in;
-  transition: -webkit-transform .2s ease-in;
   transition: transform .2s ease-in;
-  transition: transform .2s ease-in, -webkit-transform .2s ease-in;
 }
 
 .real-checkbox:checked + .custom-checkbox::before {
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
 }
 
 .real-checkbox:focus + .custom-checkbox {
-  -webkit-box-shadow: 0 0 10px rgba(24, 25, 25, 0.5);
-          box-shadow: 0 0 10px rgba(24, 25, 25, 0.5);
+  box-shadow: 0 0 10px rgba(24, 25, 25, 0.5);
 }
 
 .label-radio {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
   margin-bottom: 21px;
 }
 
@@ -818,16 +738,13 @@ input::placeholder {
   opacity: 0;
   position: absolute;
   z-index: -1;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  appearance: none;
 }
 
 .custom-radio {
   position: relative;
   display: inline-block;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   width: 20px;
   height: 20px;
   margin-right: 15px;
@@ -842,26 +759,20 @@ input::placeholder {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(0);
-          transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0);
   width: 12px;
   height: 12px;
   border-radius: 50%;
   background-color: #2AB698;
-  -webkit-transition: -webkit-transform .2s ease-in;
-  transition: -webkit-transform .2s ease-in;
   transition: transform .2s ease-in;
-  transition: transform .2s ease-in, -webkit-transform .2s ease-in;
 }
 
 .real-radio:focus + .custom-radio {
-  -webkit-box-shadow: 0 0 10px rgba(24, 25, 25, 0.5);
-          box-shadow: 0 0 10px rgba(24, 25, 25, 0.5);
+  box-shadow: 0 0 10px rgba(24, 25, 25, 0.5);
 }
 
 .real-radio:checked + .custom-radio::before {
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
 }
 
 .footer {
@@ -874,17 +785,11 @@ input::placeholder {
 }
 
 .footer-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .footer-widget-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding-top: 10px;
 }
@@ -975,6 +880,10 @@ footer .logo {
     padding-bottom: 80px;
   }
 
+  .inner-page {
+    padding-bottom: 60px;
+  }
+
   .main-row:not(:last-child) {
     margin-bottom: 80px;
   }
@@ -1052,10 +961,7 @@ footer .logo {
   }
 
   .main-row {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
+    flex-direction: row-reverse;
   }
 
   .main-row:not(:last-child) {
@@ -1073,15 +979,13 @@ footer .logo {
   .main-content-img {
     width: 170px;
     margin-right: 30px;
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
+    flex-shrink: 0;
   }
 
   .main-content-img img {
     width: 100%;
     height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
 
   .button {
@@ -1099,14 +1003,11 @@ footer .logo {
   }
 
   .footer-row {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
   }
 
   .footer-copyright {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
     width: auto;
   }
 
@@ -1157,17 +1058,11 @@ footer .logo {
   }
 
   .main-row:nth-child(even) {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    flex-direction: column-reverse;
   }
 
   .main-row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    flex-direction: column-reverse;
   }
 
   .main-row:not(:last-child) {
@@ -1195,20 +1090,12 @@ footer .logo {
   }
 
   .footer-row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 
   .footer-widget-wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: 40px;
   }
 
