--- a/css/main.css
+++ b/css/main.css
@@ -1522,6 +1522,7 @@ footer .logo {
 
   .inner-page-article {
     width: 290px;
+    margin-bottom: 30px;
   }
 
   .inner-page.inner-page--contats {
