--- a/sass/media/_tablet.scss
+++ b/sass/media/_tablet.scss
@@ -13,6 +13,10 @@
         padding-right: 20px;
     }
 
+    .header-nav {
+        display: none;
+    }
+
     .inner-page-tours-header {
         margin-bottom: 45px;
     }
@@ -27,7 +31,7 @@
         display: none;
     }
 
-    .header-nav-button{
+    .mobile-nav-button{
         display: block;
     }
 
