--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,9 @@ body {
   font-family: 'PT Sans', sans-serif;
   color: #31405B;
 }
+body.noscroll {
+  overflow: hidden;
+}
 
 body > * {
   -ms-flex-negative: 0;
@@ -235,10 +238,6 @@ legend {
   margin-right: 50px;
 }
 
-.header-nav-button {
-  display: none;
-}
-
 .header-content {
   position: absolute;
   top: 50%;
@@ -286,6 +285,57 @@ legend {
   width: 25px;
   height: 25px;
   background-image: url(./../img/header/arrow-down.svg);
+}
+
+/* === Mobile menu === */
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(38, 88, 71, 0.7);
+  z-index: 2;
+  -webkit-transition: 0.5s ease-in;
+  transition: 0.5s ease-in;
+}
+.overlay--active {
+  display: block;
+}
+
+.mobile-menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 320px;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  z-index: 2;
+  padding-top: 100px;
+  padding-left: 40px;
+  background-color: rgba(0, 14, 10, 0.8);
+  -webkit-transition: .5s ease-in;
+  transition: .5s ease-in;
+}
+.mobile-menu .mobile-menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 30px;
+  font-weight: 400;
+  font-size: 20px;
+}
+.mobile-menu--active {
+  display: block;
+  -webkit-transform: unset;
+          transform: unset;
 }
 
 .logo {
@@ -761,6 +811,73 @@ input::placeholder {
   opacity: 0.5;
 }
 
+/* === Mobile icon === */
+.mobile-nav-button {
+  display: none;
+  width: 30px;
+  height: 30px;
+  z-index: 3;
+  /* === Active mobile menu button ===*/
+}
+.mobile-nav-button .button-middle-line {
+  position: relative;
+  width: 29px;
+  height: 4px;
+  background-color: white;
+  border-radius: 4px;
+  -webkit-transition: .2s ease-in .3s;
+  transition: .2s ease-in .3s;
+}
+.mobile-nav-button .button-middle-line::before {
+  content: "";
+  position: absolute;
+  top: -8px;
+  right: 0;
+  width: 29px;
+  height: 4px;
+  background-color: white;
+  border-radius: 4px;
+  -webkit-transition: top .3s ease-in .3s, -webkit-transform .3s ease-in;
+  transition: top .3s ease-in .3s, -webkit-transform .3s ease-in;
+  transition: transform .3s ease-in, top .3s ease-in .3s;
+  transition: transform .3s ease-in, top .3s ease-in .3s, -webkit-transform .3s ease-in;
+}
+.mobile-nav-button .button-middle-line::after {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  right: 0;
+  width: 29px;
+  height: 4px;
+  background-color: white;
+  border-radius: 4px;
+  -webkit-transition: bottom .3s ease-in .3s, -webkit-transform .3s ease-in;
+  transition: bottom .3s ease-in .3s, -webkit-transform .3s ease-in;
+  transition: transform .3s ease-in, bottom .3s ease-in .3s;
+  transition: transform .3s ease-in, bottom .3s ease-in .3s, -webkit-transform .3s ease-in;
+}
+.mobile-nav-button--active .button-middle-line {
+  background-color: unset;
+}
+.mobile-nav-button--active .button-middle-line::before {
+  top: 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-transition: top .3s ease-in, -webkit-transform .3s ease-in .3s;
+  transition: top .3s ease-in, -webkit-transform .3s ease-in .3s;
+  transition: top .3s ease-in, transform .3s ease-in .3s;
+  transition: top .3s ease-in, transform .3s ease-in .3s, -webkit-transform .3s ease-in .3s;
+}
+.mobile-nav-button--active .button-middle-line::after {
+  bottom: 0;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  -webkit-transition: bottom .3s ease-in, -webkit-transform .3s ease-in .3s;
+  transition: bottom .3s ease-in, -webkit-transform .3s ease-in .3s;
+  transition: bottom .3s ease-in, transform .3s ease-in .3s;
+  transition: bottom .3s ease-in, transform .3s ease-in .3s, -webkit-transform .3s ease-in .3s;
+}
+
 .label-checkbox {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -978,6 +1095,10 @@ footer .logo {
     padding-right: 20px;
   }
 
+  .header-nav {
+    display: none;
+  }
+
   .inner-page-tours-header {
     margin-bottom: 45px;
   }
@@ -992,7 +1113,7 @@ footer .logo {
     display: none;
   }
 
-  .header-nav-button {
+  .mobile-nav-button {
     display: block;
   }
 
