--- a/sass/blocks/_button.scss
+++ b/sass/blocks/_button.scss
@@ -20,3 +20,69 @@
     text-decoration: underline;
     opacity: 0.5;
 }
+
+/* === Mobile icon === */ 
+
+.mobile-nav-button{
+    display: none;
+    width: 30px;
+    height: 30px;
+    z-index: 3;
+
+    .button-middle-line{
+        position: relative;
+        width: 29px;
+        height: 4px;
+        background-color: rgba(255, 255, 255, 1);
+        border-radius: 4px;
+        transition: .2s ease-in .3s;
+
+            &::before{
+                content: "";
+                position: absolute;
+                top: -8px;
+                right: 0;
+
+                width: 29px;
+                height: 4px;
+                background-color: rgba(255, 255, 255, 1);
+                border-radius: 4px;
+                transition: transform .3s ease-in, top .3s ease-in .3s;
+            }
+
+            &::after{
+                content: "";
+                position: absolute;
+                bottom: -8px;
+                right: 0;
+
+                width: 29px;
+                height: 4px;
+                background-color: rgba(255, 255, 255, 1);
+                border-radius: 4px;
+                transition: transform .3s ease-in, bottom .3s ease-in .3s;
+            }   
+
+        }
+
+    /* === Active mobile menu button ===*/
+    &--active{
+        .button-middle-line{
+            background-color: unset;
+
+            &::before{
+            top: 0;
+            transform: rotate(45deg);
+
+            transition: top .3s ease-in, transform .3s ease-in .3s;
+            }
+
+            &::after{
+            bottom: 0;
+            transform: rotate(-45deg);
+
+            transition: bottom .3s ease-in, transform .3s ease-in .3s;
+            }
+        }
+    }
+}
