--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -59,10 +59,6 @@
     margin-right: 50px;
 }
 
-.header-nav-button{
-    display: none;
-}
-
 .header-content {
     position: absolute;
     top: 50%;
@@ -114,4 +110,56 @@
     height: 25px;
 
     background-image: url(./../img/header/arrow-down.svg);
+}
+
+/* === Mobile menu === */
+.overlay{
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(38, 88, 71, 0.7);
+    z-index: 2;
+
+    transition: 0.5s ease-in;
+
+    &--active{
+        display: block;
+    }
+}
+
+.mobile-menu{
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 320px;
+    transform: translateX(100%);
+
+    z-index: 2;
+
+    padding-top: 100px;
+    padding-left: 40px;
+
+    background-color: rgba(0, 14, 10, 0.8);
+
+    transition: .5s ease-in;
+
+    .mobile-menu-list{
+        display: flex;
+        flex-direction: column;
+        row-gap: 30px;
+
+        font-weight: 400;
+        font-size: 20px;
+        
+    }
+
+    &--active{
+        display: block;
+        transform: unset;
+    }
 }
